// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/Attachment hide preview download 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  className="makeStyles-root-13"
  container={true}
  justifyContent="center"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <ForwardRef
      alt=""
      className="makeStyles-image-15"
      height={160}
      src="sampleFile.pdf"
      unoptimized={true}
      width={160}
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    style={
      Object {
        "wordBreak": "break-all",
      }
    }
    xs={10}
  >
    <Text
      variant="subtitle1"
    >
      
    </Text>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    align="right"
    item={true}
    xs={2}
  >
    <div
      className="makeStyles-actionIcon-11"
    >
      <Eye
        className="makeStyles-icon-12"
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`src/components/Attachment other extension 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  className="makeStyles-root-8"
  container={true}
  justifyContent="center"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <video
      autoPlay={true}
      className="makeStyles-image-10"
      loop={true}
      src="sampleFile.mp4"
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    style={
      Object {
        "wordBreak": "break-all",
      }
    }
    xs={10}
  >
    <Text
      variant="subtitle1"
    >
      
    </Text>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    align="right"
    item={true}
    xs={2}
  >
    <div
      className="makeStyles-actionIcon-6"
    >
      <Eye
        className="makeStyles-icon-7"
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`src/components/Attachment render 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  className="makeStyles-root-3"
  container={true}
  justifyContent="center"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <ForwardRef
      alt=""
      className="makeStyles-image-5"
      height={160}
      src="sampleFile.png"
      unoptimized={true}
      width={160}
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    style={
      Object {
        "wordBreak": "break-all",
      }
    }
    xs={10}
  >
    <Text
      variant="subtitle1"
    >
      
    </Text>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    align="right"
    item={true}
    xs={2}
  >
    <div
      className="makeStyles-actionIcon-1"
    >
      <Eye
        className="makeStyles-icon-2"
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
